# toolkit-installer

./: .env  .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  installer.py  main.py  pyproject.toml  requirements.txt  ruff.toml  toolkit.sh  toolkit_installer.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linter.yaml  release.yaml
docs/: README.md
phases/: fifth_phase.py  first_phase.py  fourth_phase.py  second_phase.py  third_phase.py  zero_phase.py
phases/utils/: cli.py  file.py  git.py  interactive.py  logs.py  one.py  parser.py  string.py  temp.py  ubuntu.py
scripts/: install.sh  installer.sh
src/: fifth_phase.py  first_phase.py  fourth_phase.py  functions.py  second_phase.py  third_phase.py  toolkit_installer.py  zero_phase.py
src/installer/: first_phase.py  fourth_phase.py  second_phase.py  third_phase.py  zero_phase.py
src/utils/: dotenv.py  file.py  git.py  interactive.py  logs.py  one.py  parser.py  temp.py  ubuntu.py
utils/: cli.py  file.py  git.py  logs.py  one.py  os.py  parser.py  questionary.py  temp.py
