[project]
name = "toolkit-installer"
version = "0.4.0"
description = "Python script that install and configure the MinIO, Jenkins and TNLCM stack on OpenNebula creating a new 6G-SANDBOX site."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Carlos Andreo", email = "c.andreo@uma.es" }
]

dependencies = [
    "questionary==2.1.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2"
]
