[project]
name = "toolkit-installer"
version = "1.5.0"
description = "Python script that install and configure the MinIO, Jenkins and TNLCM stack on OpenNebula creating a new 6G-SANDBOX site."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Carlos Andreo", email = "c.andreo@uma.es" },
    { name = "Daniel Garcia", email = "dgarcia@opennebula.io" },
    { name = "Rubén López", email = "rubenlocru@uma.es" },
    { name = "Rafa García", email = "rafagarciaa31@gmail.com},
]

dependencies = [
    "questionary==2.1.1",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
]
